Added flaggable to geopols

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -276,6 +276,10 @@ label {
 		font-size:x-small; 
 		vertical-align:top;
 	}
+	.flag-ul, .flag-detail-ul {
+		list-style:none;
+		}
+		
 .project-page {
   line-height:16px;
   h3 {
