--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -57,17 +57,7 @@
 	
 	<div class="project-geopoliticals project-box span5">
 		<h3>Geopolitical data:</h3>
-		<ul>
-			<% @project.geopoliticals.each do |g| %>
-				<% if !g.recipient.nil? %>
-				<li class="project-geopolitical project-li">
-					<b><%= link_to g.recipient.name, g.recipient %></b> 
-					<%= g.subnational.blank? ? '' : "(#{g.subnational})" %>
-					 <%= g.percent.blank? ? '' : " -- #{g.percent}%" %>
-				</li>
-				<% end %>
-			<% end %>
-		</ul>
+		<%= render 'project_geopoliticals' %>
 	</div>
 </div>
 <div class='row'>
