--- a/app/views/projects/_project_flags.html.erb
+++ b/app/views/projects/_project_flags.html.erb
@@ -1,13 +1,13 @@
-<ul>
+<ul class='flag-ul'>
 	<% @flags.each_with_index do |f, i| %>
-		<li>
-			<a id="flag_<%= i+1 %>"></a> 
+		<li class='flag-li'>
 			<span>
-					<%= time_ago_in_words(f.updated_at) %> ago, <%= f.owner ? f.owner.name : "An anonymous user" %> <span style="color:<%= f.flag_type.color %>"><%= pluralize( 2, f.flag_type.name )[2..10] %></span> a <%= f.flaggable_type.downcase %>.
+				<a id="flag_<%= i+1 %>"style="color:<%= f.flag_type.color%>">[<%= i+1 %>]</a> 
+					<%= time_ago_in_words(f.updated_at) %> ago, <%= f.owner ? f.owner.name : "An anonymous user" %> flagged a <%= f.flaggable_type.downcase %>. <span style="color:<%=f.flag_type.color%>">(<%=f.flag_type.name%>)</span>
 			</span>
-			<ul>
-				<li><b>Source:</b> <%= f.source %> </li>
-				<li><b>Comment:</b> <%= f.comment %> </li>
+			<ul class='flag-detail-ul'>
+				<li class='flag-detail-li'><b>Source:</b> <%= f.source %> </li>
+				<li class='flag-detail-li'><b>Comment:</b> <%= f.comment %> </li>
 			</ul>
 		</li>
 	<% end %>
