--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,7 +10,7 @@ $grayMediumLight: #eaeaea;
   box-sizing: border-box;
 }
 
-/* universal */
+																										/* universal */
 
 
 html {
@@ -39,8 +39,12 @@ textarea {
 
 }
 
+.tab-content {
+	padding:5px;
+	}
 
-/* typography */
+
+																											/* typography */
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
@@ -205,7 +209,7 @@ footer {
   stroke: #fff;
 }
 
-/* forms */
+																														/* forms */
 
 
 input, textarea, select, .uneditable-input {
@@ -263,9 +267,11 @@ label {
 	
 	.flag-link {
 		visibility:hidden;
+		position:relative;
+		top:-.3em;
 		cursor:default;
 		float:right;
-		margin: 0px 0px 0px 3px;
+		margin: 0px 0px 3px 3px;
 	}
 	.flag-link-hover {
 		visibility:visible;
@@ -281,6 +287,7 @@ label {
 		}
 		
 .project-page {
+	margin: 2px;
   line-height:16px;
   h3 {
     margin-bottom:8px;
@@ -301,8 +308,8 @@ label {
 }
 
 .project-li {
-  margin: 3px 3px 3px 3px;
-  padding: 5px;
+  margin: 1px;
+  padding: 5px 5px 12px 5px;
   border-top: 1px solid #f0f0f0;
 	}
 .project-accessory-fields, .project-box {
