--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -285,6 +285,11 @@ label {
 	.flag-ul, .flag-detail-ul {
 		list-style:none;
 		}
+	.flag-detail-ul {
+	  margin: 2px 2px 10px 20px;
+    padding: 2px 2px 2px 16px;
+    border-left: 3px solid #ccc;
+   }
 		
 .project-page {
 	margin: 2px;
