--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -1,5 +1,4 @@
 
-
 <div id = "vis_controls" class="row" style='text-align:center;'>
 <%= form_for Project.new, html: {class: ""} do |f| %>
   <%= f.select :oda_like, options_for_select(["All Flow Classes"] + OdaLike.all.collect {|o| o.name}, "All Flow Classes"), {}, {multiple: true, class: "span2 vis_input", id: "oda_like_input", selected_value: "All Flow Classes"}  %>
@@ -52,7 +51,7 @@ var w = 800,
     path = d3.geo.path().projection(xy),
     c = d3.scale.linear().domain([0,8000000000,150000000000]).range(['#FAEDD9', '#808F12', '#2A5C0B']),
     logscale = d3.scale.log().domain([1,150000000000]),
-    greyscalec = d3.scale.linear().domain([0,5]).range(['#8A8A8A','#FFFFFF']),
+    greyscalec = d3.scale.linear().domain([3,4]).range(['#000000','#FFFFFF']),
     c_sector= d3.scale.category20c(),
     money = d3.format("0,r")
     years = d3.range(2000,2012), 
@@ -199,7 +198,7 @@ function make_map_with_params(params) {
 
 //Rescale params - double check for color consistency
        c.domain([0,((d3.max(map_data, function(m) {return m.values.value}))/20),d3.max(map_data, function(m) {return m.values.value})]);
-       logscale.domain([1,d3.max(map_data, function(m) {return m.values.value})]);
+       logscale.domain([1,c.domain()[2]]);
 
       country = d3.select("#states #"+d.key)
       color = d.values.value == null ? '#777' : c(d.values.value)
@@ -849,18 +848,21 @@ if(logscale.ticks().length>0){
 oldlegendArray=logscale.ticks()
 newlegendArray=[]
 newlegendArray.push(oldlegendArray[(oldlegendArray.length/2).toFixed(0)])
-newlegendArray.push(oldlegendArray[((oldlegendArray.length/2)+1).toFixed(0)])
-newlegendArray = newlegendArray.concat(oldlegendArray.slice(-4))
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(3/4)).toFixed(0)])
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(5/6)).toFixed(0)])
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(7/8)).toFixed(0)])
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(15/16)).toFixed(0)])
+newlegendArray = newlegendArray.concat(oldlegendArray.slice(-1))
 //Redraw rects
 vis.selectAll('rect#legend')
     .data(newlegendArray)
-    .transition().duration(2000)
+    .transition().duration(1000)
     .attr("width", function(d, i) {return (min_bar_height+(i*bar_height_increment))})
     .attr("fill", function (d) {return c(d)});
 //Redraw text
 vis.selectAll('text#legend')
   .data(newlegendArray)
-.transition().duration(2000)
+.transition().duration(1000)
   .attr("fill", function(d,i) {return greyscalec(i)})
   .text(function(d) {return "$" + nicemoney(d)})}
   else{}
@@ -917,8 +919,11 @@ function make_legend(legendAmounts) {
 oldlegendArray=legendAmounts
 newlegendArray=[]
 newlegendArray.push(oldlegendArray[(oldlegendArray.length/2).toFixed(0)])
-newlegendArray.push(oldlegendArray[((oldlegendArray.length/2)+1).toFixed(0)])
-newlegendArray = newlegendArray.concat(oldlegendArray.slice(-4))
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(3/4)).toFixed(0)])
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(5/6)).toFixed(0)])
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(7/8)).toFixed(0)])
+newlegendArray.push(oldlegendArray[(oldlegendArray.length*(15/16)).toFixed(0)])
+newlegendArray = newlegendArray.concat(oldlegendArray.slice(-1))
 legend_bar_width = (18/800)*w
 legend_bar_margin = 2
 min_bar_height = (6/80)*h
