--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,7 +7,8 @@
 		<h1 style="display:inline;text-align:center;" id="inactive-project">-- Inactive --</h1>
 	<% end %>
 	<% if signed_in? && current_user.owner == @project.owner %>
-			<p class='edit-project-link'><b><%= link_to "Edit this project", edit_project_path(@project) %></b></p>
+			<p class='edit-project-link'><b><%= link_to "Edit this project", edit_project_path(@project) %></b></p> 
+			<p class='delete-project-link'><b><%= link_to "Delete this project", @project, method: :delete, confirm: "Are you sure?" %></b></p>
 	<% end %>
 </div>
 
