--- a/app/views/shared/code.html.erb
+++ b/app/views/shared/code.html.erb
@@ -12,8 +12,9 @@
 	<p class='span12'> Referenced by <b><%= link_to pluralize(object.projects.count, "project"), "/projects?#{type.downcase.gsub(/\s/, '_')}_name=#{object.name.gsub(/\s/, '+')}" %></b>. </p>
 <% end %>
 <p>
-	<% if current_user.present? && current_user.admin? %>
+	<% if current_user_is_aiddata_admin %>
 		<%= link_to "Edit", "/#{type.pluralize.downcase.gsub(/\s/, '_')}/#{object.id}/edit" %> |
+		<%= link_to "Destroy", "/#{type.pluralize.downcase.gsub(/\s/, '_')}/#{object.id}", method: :delete, confirm: "Are you sure?" %> | 
 	<% end %> 
 	
 	<%= link_to "See All #{type.pluralize}", "/#{type.pluralize.downcase.gsub(/\s/, '_')}" %>
