--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -40,7 +40,7 @@
 			<li><b>Uncertain Debt Relief:</b> <%= @project.debt_uncertain %></li>
 			<li><b>CRS Sector:</b> <%= @project.crs_sector || @unset_data %></li>
 			<li><b>Flow Type:</b> <%= @project.flow_type.nil? ? @unset_data :  link_to(@project.flow_type.name, @project.flow_type) %></li>
-			<li><b>Tied:</b> <%= @project.tied.nil? ? @unset_data : link_to(@project.tied.name, @project.tied) %></li>
+			<!-- li><i> DEPRECATED:</i><b>Tied:</b> <%= @project.tied.nil? ? @unset_data : link_to(@project.tied.name, @project.tied) %></li!-->
 			<li><b>Commercial:</b> <%= @project.is_commercial %></li>
 			<li><b>Line of Credit:</b> <%= @project.line_of_credit %></li>
 			<li><b>Cofinanced:</b> <%= @project.is_cofinanced %></li>
