Enabled Project.cache_one! and changing a Code now updates projects and caches

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,9 @@
           </a>
 
           <nav>
+          	<% if Rails.env.development? %>
+          		<p class="pull-right" style="margin:5px;color:#fcc;font-size:20px"><b>DEVELOPMENT</b></p>
+          	<% end %>
             <ul class="nav pull-right">
                   <li><%= link_to "Home", root_path %> </li>
                   <!-- Links for anyone !-->
