--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
 <%= link_to "New User", new_user_path%>
 <div>
-<% hidden_fields = ["created_at", "updated_at", "id", "admin", "password_digest", "remember_token", "owner_id"] %>
+<% hidden_fields = ["created_at", "updated_at", "id", "password_digest", "remember_token", "owner_id"] %>
 
 <table class='code-index-table'>
 	<thead>
