--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,6 +22,7 @@
 
 <div class="tab-content">
   <div class="tab-pane active" id="details">
+  		<h2>Project Details</h2>
 		<%= render 'project' %>
 		<div class='row'>
 			<%= render 'comment_form' %>
