--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -257,6 +257,9 @@ label {
     color: #942;
   }
   
+  .flaggable {
+  	padding: 1px;
+  }
 	.flaggable-hover {
 		-moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -265,22 +268,23 @@ label {
     background-color: #ccc;
 	}
 	
-	.flag-link {
+
+	
+	.flag-links {
+		vertical-align:text-top;
 		visibility:hidden;
-		position:relative;
-		top:-.3em;
 		cursor:default;
 		float:right;
-		margin: 0px 0px 3px 3px;
+		margin: 0px 0px 0px 0px;
 	}
-	.flag-link-hover {
+	
+	.flag-links-hover {
 		visibility:visible;
 		cursor:pointer;
 	}
 	
 	.flag-reference {
-		font-size:x-small; 
-		vertical-align:top;
+
 	}
 	.flag-ul, .flag-detail-ul {
 		list-style:none;
@@ -304,8 +308,9 @@ label {
   .project-details {
     margin-left:5px;
   }
-
-
+  .project-overview {
+  	display:inline;
+  	}
 
 }
 .inactive-project-title {
@@ -314,12 +319,13 @@ label {
 
 .project-li {
   margin: 1px;
-  padding: 5px 5px 12px 5px;
+  padding: 5px 5px 16px 5px;
   border-top: 1px solid #f0f0f0;
 	}
+	
 .project-accessory-fields, .project-box {
-  margin: 5px 5px 0px 5px;
-  padding: 10px;
+  margin: 5px 2px 0px 10px;
+  padding: 5px;
   border-top: 2px solid #e5e5e5;
   h3 {
     margin-bottom:5px;
