--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -4,6 +4,8 @@
 	<%= f.input :email, input_html: { class: "span6" }, hint: "Email must be unique" %>
 	<%= f.input :password, input_html: {class: "span6"}, hint: "Must be longer than six characters" %>
 	<%= f.input :password_confirmation, input_html: { class: "span6"}, hint: 'Must match password' %>
-	<%= f.input(:admin, hint: "Administrative permissions?") if current_user.admin %>
+	<% if current_user.admin %>
+		<%= f.input(:admin, hint: "Administrative permissions?") if current_user.admin %>
+	<% end %>
 	<%= f.button :submit, @user.new_record? ? 'Create my account' : "Update user", class: "btn-primary" %>
 <% end %> 
