Improved active checkbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -252,6 +252,13 @@ label {
   @extend .error;
 }
 
+.boolean {
+	cursor:pointer
+	}
+.boolean:hover {
+	background-color:#d0d9f0;
+	}
+
                                     /* Project Pages */
   #inactive-project {
     color: #942;
