--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -29,7 +29,9 @@
     <li><%= link_to "Statuses", statuses_path %></li>
     <li><%= link_to "Sectors", sectors_path %></li>
     <li><%= link_to "ODA-Likes", oda_likes_path %></li>
-    <li><%= link_to "Tieds", tieds_path %></li>
+    <!-- li>
+    <%= # link_to "Tieds", tieds_path 
+    %></li !-->
     <li><%= link_to "Flow Types", flow_types_path %></li>
     <li><%= link_to "Verifieds", verifieds_path %></li>
     <li><%= link_to "Source Types", source_types_path %></li>
