--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -4,6 +4,7 @@
   <%= f.select :verified, options_for_select(["All Verified Levels"] + Verified.all.collect {|o| o.name}, "All Verified Levels"), {}, {class: "span2 vis_input", multiple: true, id: "verified_input"}  %>
   <%= f.select :sector, options_for_select(["All Sectors"] + Sector.all.collect {|o| o.name}, "All Sectors"), {},{class: "span2 vis_input", multiple: true, id: "sector_input"}  %>
   <%= f.select :flow_type, options_for_select(["All Flow Types"] + FlowType.all.collect {|o| o.name}, "All Flow Types"), {}, {class: "span2 vis_input", multiple: true, id: "flow_type_input"}  %>
+  <%= f.select :year, options_for_select(["All Years"] + (2000..2010).to_a.reverse! , "All Years"), {}, {class: "span2 vis_input", multiple: true, id: "year_input"}  %>
 <% end %>
 </div>
 
@@ -35,6 +36,8 @@ function gather_inputs () {
  $('#sector_input option:selected').each(function(d) {t = $(this).text(); if (t.indexOf('All')!=0) {sectors.push(t)}})
  flow_types =[]
  $('#flow_type_input option:selected').each(function(d) { t = $(this).text(); if (t.indexOf('All')!=0) {flow_types.push(t)}})
+active_years =[] // years was already taken
+ $('#year_input option:selected').each(function(d) { t = $(this).text(); if (t.indexOf('All')!=0) {active_years.push(t)}})
 
 
 input_params = {}
@@ -43,6 +46,7 @@ oda_likes.length > 0 ? input_params.flow_class= oda_likes : null;
 verifieds.length > 0 ? input_params.verified= verifieds : null;
 sectors.length > 0 ? input_params.sector_name= sectors : null;
 flow_types.length > 0 ? input_params.flow_type= flow_types : null;
+active_years.length > 0 ? input_params.year= active_years : null;
 delete active_params.recipient_iso2
 delete active_params.get
 if (input_params !=active_params ){
