Included CV in collections and jquery to nudge it into place

--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -1000,4 +1000,7 @@ legend.append("svg:foreignObject")
     .html("<p style='color:black;'><b>Chinese Development Finance, 2000-2011<b><br><i>USD-2009</i> || <a style='color:#333;'href='/projects'>See the Data</a></p>")
 }
 
+
+//Fix CV
+$('path#CV').attr("transform","translate (80,100)")
 </script>
