--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -8,7 +8,29 @@
 <% end %>
 </div>
 
-<div id="vis"></div>
+    <div class="content">
+    <!--[if IE 6]>
+  <div id="error">
+  <p>Sorry! This interactive graphic requires a browser with SVG support, such as <a href="http://www.google.com/chrome">Chrome</a>, <a href="http://www.mozilla.org/en-US/firefox/">Firefox</a>, or <a href="http://www.apple.com/safari/download/">Safari</a>. </p>
+  </div>
+  <div id="vis" style="display:none;"></div>
+		<![endif]-->
+<!--[if IE 7]>
+  <div id="error">
+  <p>Sorry! This interactive graphic requires a browser with SVG support, such as <a href="http://www.google.com/chrome">Chrome</a>, <a href="http://www.mozilla.org/en-US/firefox/">Firefox</a>, or <a href="http://www.apple.com/safari/download/">Safari</a>. </p>
+  </div>
+  <div id="vis" style="display:none;"></div>
+		<![endif]-->
+<!--[if IE 8]>
+  <div id="error">
+ <p>Sorry! This interactive graphic requires a browser with SVG support, such as <a href="http://www.google.com/chrome">Chrome</a>, <a href="http://www.mozilla.org/en-US/firefox/">Firefox</a>, or <a href="http://www.apple.com/safari/download/">Safari</a>. </p>
+   </div>
+  <div id="vis" style="display:none;"></div>
+		<![endif]-->
+<!--[if IE 9]>
+  <div id="vis"></div>
+		<![endif]-->  
+<![if !IE]><div id="vis"></div><![endif]></div>
 <div id="tooltip"><p id="tooltiptext"></p></div>
 <script type="text/javascript">
 $('#vis').css('text-align', 'center')
