--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -27,7 +27,7 @@ end %>
 	<thead>
 		<tr >
 			<% current_url_with_joiner_without_ordering = "#{current_url.gsub(/&?dir=[a-z]+/, '').gsub(/&?order_by=[0-9a-z_]+/, '')}#{joiner}" %>
-			<th><%= link_to "Donor","#{current_url_with_joiner_without_ordering}#{order_by_params("donor")}"  %></th>
+			<th><%= link_to "Donor","#{current_url_with_joiner_without_ordering}#{order_by_params("donor_name")}"  %></th>
 			<th><%= link_to "Title","#{current_url_with_joiner_without_ordering}#{order_by_params("title")}"  %></th>
 			<th><%= link_to "Year","#{current_url_with_joiner_without_ordering}#{order_by_params("year")}"  %></th>
 			<th><%= link_to "Recipients","#{current_url_with_joiner_without_ordering}#{order_by_params("recipient_condensed")}"  %></th>
