--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
   <li><a href="#projects">All Projects</a></li>
   <li><a href="#activity-feed">Recent Activity</a></li>
   <li><a href="#research">Research and Papers</a></li>
-  <li><a href="#documentation">Data and API Documentation</a></li>
+  <li><a href="#documentation">API Documentation</a></li>
 </ul>
 
 
